--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Contact</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
     </header>
 
     <main>
-    <h1><b>Mes Contacts</b></h1>
+    <h1 class="contact"><b>Mes Contacts</b></h1>
     <p><b>Numero de telephone :</b> 77 712 55 76</p>
     <p><b>Mail :</b> jimmybang36@gmail.com</p>
     <p><b>Instagram : </b>Jimmy / <b>Facebook : </b>JimmyT</p>
