--- a/cv.html
+++ b/cv.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Curriculum vitae</title>
 </head>
 
@@ -15,7 +16,7 @@
         <nav><a href="cv.html">CV</a></nav>
         <nav><a href="contact.html">Contact</a></nav>
         <h1 align="center">Jimmy</h1>
-        <h3 align="center">Curriculum Vitae</h3>
+        <h3 class="surligne1">Curriculum Vitae</h3>
         <center>
             <img src="./images/360_F_396167959_aAhZiGlJoeXOBHivMvaO0Aloxvhg3eVT.jpg" alt="Photo CV">
         </center>
@@ -23,23 +24,23 @@
 
     <main>
         <div align="center">
-            <p><b>Liste des parcours professionels :</b></p>
+            <p class="surligne2"><b>Liste des parcours professionels :</b></p>
             <br>
 
             <ul>
-                <li><b>2012</b> - Obtention du Baccalaureat </li>
+                <li><b class="date">2012</b> - Obtention du Baccalaureat </li>
                 <br>
-                <li><b>2017</b>- Master en Web developer</li>
+                <li><b class="date">2017</b>- Master en Web developer</li>
                 <br>
-                <li><b>2018</b> - Ingenieur chez SONATEL</li>
+                <li><b class="date">2018</b> - Ingenieur chez SONATEL</li>
                 <br>
-                <li><b>2020</b> - Administrateur de base de donnees chez SONATEL</li>
+                <li><b class="date">2020</b> - Administrateur de base de donnees chez SONATEL</li>
                 <br>
-                <li><b>2021</b> - Chef d'equipe du departement informatique chez SONATEL</li>
+                <li><b class="date">2021</b> - Chef d'equipe du departement informatique chez SONATEL</li>
                 <br>
-                <li><b>2023</b> - Chef d'equipe du departement informatique chez WAVE</li>
+                <li><b class="date">2023</b> - Chef d'equipe du departement informatique chez WAVE</li>
                 <br>
-                <li><b>2025</b> - Directeur technique chez Microsoft</li>
+                <li><b class="date">2025</b> - Directeur technique chez Microsoft</li>
             </ul>
         </div>
     </main>
