--- a/travail.html
+++ b/travail.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Travail</title>
 </head>
 
@@ -19,7 +20,7 @@
     <main>
         <section>
             <br><br><br>
-            <table border="1" width="300px" height="300px">
+            <table>
                 <tr>
                     <th>Liste des travaux</th>
                     <th>Annee</th>
