--- a/apropo.html
+++ b/apropo.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>A propos</title>
 </head>
 <body>
@@ -22,7 +23,7 @@
         </section>
 
         <section>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/vic9icCII4E?si=USJ0W0mF8B02eyyf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/vic9icCII4E?si=USJ0W0mF8B02eyyf" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen, autoplay></iframe>
         </section>
     </main>
 
